--- a/CechCohomologyLineBundles/src/VanishingTheorems.tex
+++ b/CechCohomologyLineBundles/src/VanishingTheorems.tex
@@ -268,7 +268,7 @@ So if $p+q > n$, we must have that $\norm{\alpha}^2_{L^2} = 0$, i.e. $\alpha = 0
 The lemmas we proved earlier also give rise to another vanshing theorem due to
 Serre.
 %
-\begin{thm}[\ib{Serre Vanshing}]
+\begin{thm}[\ib{Serre Vanishing}]
 Let $L \to X$ be a positive line bundle. Then for any holomorphic vector bundle
 $E \to X$, there exists a positive integer $m_0$ such that
 \[
@@ -312,8 +312,6 @@ $i([\Lambda,F_\nabla]\alpha,\alpha) \geq 0$, we have that when $p+q > n$, a
 sufficiently large choice of $m$ will make $m(n-(p+q))$ sufficiently negative
 such that the only we we can have $\alpha = 0$.
 \end{proof}
-%
-\section*{Another Way to Compute the Cohomology of $\CP^n$}
 %
 With the Kodaira-Nakano Vanishing Theorem and more help from Hodge theory, we have
 anotherway to compute the sheaf cohomology of line bundles over $\CP^n$. To
