--- a/ChernWeil/ChernWeil.tex
+++ b/ChernWeil/ChernWeil.tex
@@ -850,6 +850,7 @@ The Chern classes generate the image of the Chern-Weil homomorphism : every
 cohomology class in the image can be written as a polynomial in Chern classes.
 \end{thm}
 %
+\iffalse
 \section{The Story for Vector Bundles}
 %
 Every vector bundle $E \to M$ gives rise to a frame bundle $\mathcal{B}(E) \to M$.
@@ -858,5 +859,6 @@ bundles is then subsumed by the principal bundle theory. However, we should
 make sure that what we have done agrees with the usual notions on vector bundles.
 In addition, we study the relationship between principal bundles and their
 associated vector bundles.
+\fi
 %
 \end{document}
