--- a/CechCohomologyLineBundles/ComplexGeometryNotes.tex
+++ b/CechCohomologyLineBundles/ComplexGeometryNotes.tex
@@ -230,6 +230,10 @@
 %
 \tableofcontents
 %
+%TODO Adjunction Formula
+%TODO Maps to projective space
+%TODO Curvature descreases in subs increases in quotients
+%
 \input{src/Cech.tex}
 %
 \input{src/CechProjective.tex}
@@ -237,6 +241,8 @@
 \input{src/CechLineBundles.tex}
 %
 \input{src/Divisors.tex}
+%
+\input{src/AdjunctionFormula.tex}
 %
 \input{src/SheafCohomology.tex}
 %
